Implemented conditional lore functions
Took 2 minutes